export const ROUTES = {
    pokedex: 'pokedex',
    pokemon: 'pokemon',
    favorites: 'favorites'
};
